// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`theme tokens > snapshots both themes so token drift is reviewed 1`] = `
{
  "borderWidths": {
    "none": 0,
    "thick": 2,
    "thin": 1,
  },
  "colors": {
    "accent": "#8A5A12",
    "accentContrast": "#FFFFFF",
    "accentMuted": "#A97A2E",
    "background": "#F6F2EA",
    "border": "#E0D7C7",
    "borderStrong": "#C7BCA8",
    "controlBorder": "#767D88",
    "danger": "#B3261E",
    "dangerContrast": "#FFFFFF",
    "dangerFill": "#B3261E",
    "focus": "#1B5FA8",
    "info": "#1B5FA8",
    "overlay": "rgba(27, 30, 34, 0.45)",
    "positive": "#1B7A48",
    "progressFill": "#8A5A12",
    "progressTrack": "#E2D9C9",
    "skeleton": "#E5DDCE",
    "surface": "#FFFFFF",
    "surfaceElevated": "#FCF9F3",
    "surfaceRaised": "#F1EBE0",
    "surfaceSunken": "#EDE6D9",
    "tabBar": "#FFFFFF",
    "tabBarBorder": "#E7DFD1",
    "textInverse": "#FFFFFF",
    "textMuted": "#5D646C",
    "textPrimary": "#1B1E22",
    "textSecondary": "#4A5058",
    "warning": "#8A5A12",
  },
  "elevations": {
    "high": 6,
    "low": 2,
    "none": 0,
  },
  "fontSizes": {
    "body": 16,
    "caption": 12,
    "display": 34,
    "heading": 20,
    "label": 14,
    "subheading": 17,
    "title": 26,
  },
  "fontWeights": {
    "bold": "700",
    "medium": "500",
    "regular": "400",
    "semibold": "600",
  },
  "fonts": {},
  "letterSpacing": {
    "normal": 0,
    "tight": -0.2,
    "tighter": -0.4,
    "wide": 0.4,
  },
  "lineHeights": {
    "body": 24,
    "caption": 16,
    "display": 40,
    "heading": 26,
    "label": 20,
    "title": 32,
  },
  "radii": {
    "card": 20,
    "control": 14,
    "pill": 999,
    "sheet": 24,
    "sm": 10,
    "xs": 6,
  },
  "scheme": "light",
  "spacing": {
    "lg": 16,
    "md": 12,
    "none": 0,
    "sm": 8,
    "xl": 24,
    "xs": 4,
    "xxl": 32,
    "xxs": 2,
  },
  "tones": {
    "accent": {
      "background": "#F6EBD4",
      "border": "#E1C99A",
      "content": "#7A4E0A",
    },
    "danger": {
      "background": "#FBE5E4",
      "border": "#EFBDBB",
      "content": "#96201A",
    },
    "info": {
      "background": "#E4EEFA",
      "border": "#B7D2EF",
      "content": "#14508F",
    },
    "neutral": {
      "background": "#EFE9DD",
      "border": "#D8CDB9",
      "content": "#3F454D",
    },
    "success": {
      "background": "#E1F1E7",
      "border": "#B4DCC4",
      "content": "#146039",
    },
    "warning": {
      "background": "#F7EDD5",
      "border": "#E3CD97",
      "content": "#7A4E0A",
    },
  },
  "touchTargets": {
    "comfortable": 56,
    "iconButton": 48,
    "large": 64,
    "minimum": 48,
    "tabBar": 64,
  },
}
`;

exports[`theme tokens > snapshots both themes so token drift is reviewed 2`] = `
{
  "borderWidths": {
    "none": 0,
    "thick": 2,
    "thin": 1,
  },
  "colors": {
    "accent": "#E8B65F",
    "accentContrast": "#16181C",
    "accentMuted": "#B98E42",
    "background": "#101215",
    "border": "#313841",
    "borderStrong": "#454E59",
    "controlBorder": "#6B7480",
    "danger": "#F58B90",
    "dangerContrast": "#FFFFFF",
    "dangerFill": "#B3261E",
    "focus": "#8CC0F5",
    "info": "#8CC0F5",
    "overlay": "rgba(0, 0, 0, 0.6)",
    "positive": "#7BD39B",
    "progressFill": "#E8B65F",
    "progressTrack": "#2C333B",
    "skeleton": "#2A3038",
    "surface": "#181B1F",
    "surfaceElevated": "#1F2329",
    "surfaceRaised": "#262B32",
    "surfaceSunken": "#0B0D0F",
    "tabBar": "#14171B",
    "tabBarBorder": "#262B32",
    "textInverse": "#16181C",
    "textMuted": "#9AA1AA",
    "textPrimary": "#F3F4F6",
    "textSecondary": "#C2C8D0",
    "warning": "#F1C55A",
  },
  "elevations": {
    "high": 6,
    "low": 2,
    "none": 0,
  },
  "fontSizes": {
    "body": 16,
    "caption": 12,
    "display": 34,
    "heading": 20,
    "label": 14,
    "subheading": 17,
    "title": 26,
  },
  "fontWeights": {
    "bold": "700",
    "medium": "500",
    "regular": "400",
    "semibold": "600",
  },
  "fonts": {},
  "letterSpacing": {
    "normal": 0,
    "tight": -0.2,
    "tighter": -0.4,
    "wide": 0.4,
  },
  "lineHeights": {
    "body": 24,
    "caption": 16,
    "display": 40,
    "heading": 26,
    "label": 20,
    "title": 32,
  },
  "radii": {
    "card": 20,
    "control": 14,
    "pill": 999,
    "sheet": 24,
    "sm": 10,
    "xs": 6,
  },
  "scheme": "dark",
  "spacing": {
    "lg": 16,
    "md": 12,
    "none": 0,
    "sm": 8,
    "xl": 24,
    "xs": 4,
    "xxl": 32,
    "xxs": 2,
  },
  "tones": {
    "accent": {
      "background": "#2C2417",
      "border": "#5C4A22",
      "content": "#EEC078",
    },
    "danger": {
      "background": "#2E1B1D",
      "border": "#5C2F32",
      "content": "#F7A0A4",
    },
    "info": {
      "background": "#18293B",
      "border": "#2C4863",
      "content": "#9CC8F7",
    },
    "neutral": {
      "background": "#242A31",
      "border": "#3A424C",
      "content": "#C2C8D0",
    },
    "success": {
      "background": "#152A20",
      "border": "#265039",
      "content": "#8ADBAA",
    },
    "warning": {
      "background": "#2E2616",
      "border": "#5C4A22",
      "content": "#F1C55A",
    },
  },
  "touchTargets": {
    "comfortable": 56,
    "iconButton": 48,
    "large": 64,
    "minimum": 48,
    "tabBar": 64,
  },
}
`;
